// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Compact Video Link Dark bg 1`] = `
<section
  className="sc-jzJRlG lfQJfN"
>
  <div
    className="sc-bwzfXH ciboha"
  >
    <div
      className="sc-gZMcBi czhXCo sc-bwzfXH imfoSK"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div
        className="sc-htpNat hOSvSf"
      >
        <div
          className="sc-bxivhb icukFi"
        >
          <a
            className="sc-jTzLTM ZdqHv"
            color="#fff"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={0.5}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-fjdhpX fdxDzp"
            >
              <div
                className="sc-htpNat hSZREN"
              >
                <img
                  alt="Play button"
                  className="sc-gqjmRU heUaDl"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-VigVT jEpWYT"
                color="#fff"
                opacity={0.5}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Compact Video Link Grey bg 1`] = `
<section
  className="sc-cSHVUG FwFfO"
>
  <div
    className="sc-bwzfXH ciboha"
  >
    <div
      className="sc-gZMcBi czhXCo sc-bwzfXH imfoSK"
      width={
        Array [
          1,
          1,
          1,
          1,
          0.5,
          0.3333333333333333,
        ]
      }
    >
      <div
        className="sc-htpNat hOSvSf"
      >
        <div
          className="sc-bxivhb icukFi"
        >
          <a
            className="sc-jTzLTM ZdqHv"
            color="#333333"
            href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
            opacity={1}
            rel="noopener noreferrer"
            target="_blank"
          >
            <div
              className="sc-fjdhpX fdxDzp"
            >
              <div
                className="sc-htpNat hSZREN"
              >
                <img
                  alt="Play button"
                  className="sc-gqjmRU heUaDl"
                  src="test-file-stub"
                />
              </div>
              <p
                className="sc-VigVT ihPljm"
                color="#333333"
                opacity={1}
              >
                Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
              </p>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Compact Video Link Multiple Components component 1`] = `
<div
  className="sc-bwzfXH ciboha"
>
  <div
    className="sc-gZMcBi czhXCo sc-bwzfXH imfoSK"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-htpNat hOSvSf"
    >
      <div
        className="sc-bxivhb icukFi"
      >
        <a
          className="sc-jTzLTM ZdqHv"
          color="#333333"
          href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
          opacity={1}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-fjdhpX fdxDzp"
          >
            <div
              className="sc-htpNat hSZREN"
            >
              <img
                alt="Play button"
                className="sc-gqjmRU heUaDl"
                src="test-file-stub"
              />
            </div>
            <p
              className="sc-VigVT ihPljm"
              color="#333333"
              opacity={1}
            >
              Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="sc-gZMcBi czhXCo sc-bwzfXH imfoSK"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-htpNat hOSvSf"
    >
      <div
        className="sc-bxivhb icukFi"
      >
        <a
          className="sc-jTzLTM ZdqHv"
          color="#333333"
          href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
          opacity={1}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-fjdhpX fdxDzp"
          >
            <div
              className="sc-htpNat hSZREN"
            >
              <img
                alt="Play button"
                className="sc-gqjmRU heUaDl"
                src="test-file-stub"
              />
            </div>
            <p
              className="sc-VigVT ihPljm"
              color="#333333"
              opacity={1}
            >
              Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div
    className="sc-gZMcBi czhXCo sc-bwzfXH imfoSK"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-htpNat hOSvSf"
    >
      <div
        className="sc-bxivhb icukFi"
      >
        <a
          className="sc-jTzLTM ZdqHv"
          color="#333333"
          href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
          opacity={1}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-fjdhpX fdxDzp"
          >
            <div
              className="sc-htpNat hSZREN"
            >
              <img
                alt="Play button"
                className="sc-gqjmRU heUaDl"
                src="test-file-stub"
              />
            </div>
            <p
              className="sc-VigVT ihPljm"
              color="#333333"
              opacity={1}
            >
              Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Compact Video Link Single component 1`] = `
<div
  className="sc-bwzfXH ciboha"
>
  <div
    className="sc-gZMcBi czhXCo sc-bwzfXH imfoSK"
    width={
      Array [
        1,
        1,
        1,
        1,
        0.5,
        0.3333333333333333,
      ]
    }
  >
    <div
      className="sc-htpNat hOSvSf"
    >
      <div
        className="sc-bxivhb icukFi"
      >
        <a
          className="sc-jTzLTM ZdqHv"
          color="#333333"
          href="https://www.youtube.com/watch?v=IeuuBKBb4Wg"
          opacity={1}
          rel="noopener noreferrer"
          target="_blank"
        >
          <div
            className="sc-fjdhpX fdxDzp"
          >
            <div
              className="sc-htpNat hSZREN"
            >
              <img
                alt="Play button"
                className="sc-gqjmRU heUaDl"
                src="test-file-stub"
              />
            </div>
            <p
              className="sc-VigVT ihPljm"
              color="#333333"
              opacity={1}
            >
              Manipulating the Web Audio API with JSX and Custom Renderers - James Wright
            </p>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form Button 1`] = `
<button
  className="sc-kGXeez jWKlEr"
>
  Click Me
</button>
`;

exports[`Storyshots Form Checkbox 1`] = `
<section
  className="sc-dxgOiQ sKjjt"
>
  <input
    className="sc-kAzzGY fYcsoX"
    id="checkbox"
    name="checkbox"
    type="checkbox"
  />
  <label
    htmlFor="checkbox"
  >
    Label
  </label>
</section>
`;

exports[`Storyshots Form Field 1`] = `
<section
  className="sc-kpOJdX FXAFh"
>
  <input
    className="sc-chPdSV evKaBU"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Fieldset 1`] = `
<section
  className="sc-dxgOiQ sKjjt"
>
  <input
    className="sc-chPdSV evKaBU"
    placeholder="test"
    type="text"
  />
</section>
`;

exports[`Storyshots Form Input 1`] = `
<input
  className="sc-chPdSV evKaBU"
  placeholder="test"
  type="text"
/>
`;

exports[`Storyshots Form Label 1`] = `
<label
  className="sc-kgoBCf bbkuDQ"
>
  Label
</label>
`;

exports[`Storyshots Typography Large Body 1`] = `
<h3
  className="sc-bZQynM bdjeOF"
>
  Large Body
</h3>
`;

exports[`Storyshots Typography Large title 1`] = `
<h1
  className="sc-ifAKCX byXBNe"
>
  Large title
</h1>
`;

exports[`Storyshots Typography Small Title 1 1`] = `
<h4
  className="sc-gzVnrw iltYUC"
>
  Small Title
</h4>
`;

exports[`Storyshots Typography Small Title 2 1`] = `
<h5
  className="sc-htoDjs jdpgcj"
>
  Small Title
</h5>
`;

exports[`Storyshots Typography Small Title 3 1`] = `
<h6
  className="sc-dnqmqq fxTddO"
>
  Small Title
</h6>
`;
